--- a/local.env
+++ b/local.env
@@ -1,8 +1,8 @@
 #docker-compose Postgres Setup
-POSTGRES_USER=turnips
-POSTGRES_PASSWORD=turnips
-POSTGRES_DB=turnips
+POSTGRES_USER=wordle
+POSTGRES_PASSWORD=wordle
+POSTGRES_DB=wordle
 
 #Go bot setup
-DATABASE_URL=postgres://turnips:turnips@localhost:5432/turnips?sslmode=disable
+DATABASE_URL=postgres://wordle:wordle@localhost:5432/wordle?sslmode=disable
 DISCORD_TOKEN=replace
