--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - local.env
     volumes:
       - database-data:/var/lib/postgresql/data/
+    command: [ "postgres", "-c", "log_statement=all", "-c", "shared_preload_libraries=pg_stat_statements", "-c", "pg_stat_statements.track=all" ]
   sqlc:
     image: "kjconroy/sqlc"
     volumes:
